# terminal-portfolio-manager

./: .env.example  .env.save  .gitignore  CHANGELOG_COMMANDS.md  COMMAND_USABILITY_ANALYSIS.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  cli.py  config.py
app/agent/: __init__.py  stock_agent.py
app/models/: __init__.py  ai_response.py  portfolio.py  stock.py
app/newsletter/: __init__.py  cli.py
app/services/: __init__.py  ai_service.py  email_service.py  newsletter_service.py  portfolio_service.py  rate_limiter.py  stock_service.py
app/ui/: __init__.py  console.py  display.py  prompts.py
app/utils/: __init__.py  exceptions.py  formatters.py  validators.py
data/: portfolio.db
